
	callmonitor-1.5 veröffentlicht

2006-09-10:

	* reverse.sh: weristdran.de hat den Rückwärtssuche-Service
	eingestellt.

	* mail: Bei leerem Benutzernamen oder Passwort die entsprechenden
	Optionen weglassen (Fehler bei T-Online; Dank an dbox2freak)

	callmonitor-1.5.1 veröffentlicht

2006-09-23:

	* roku.sh: Funktionen für Roku SoundBridge: sbmessage zeigt eine Zeile
	statischen Text an (mit SB_TIMEOUT kann die Dauer beeinflusst werden),
	sbmarquee zeigt wiederholt einen Lauftext an (SB_TIMES bestimmt, wie
	oft).

	* rc.callmonitor: Callers und Listeners bei Initialisierung anlegen,
	falls nicht vorhanden

2006-09-27:

	* reverse.sh: dasoertliche.de hat seine Webseiten umgestellt;
	Anpassung

2006-09-29:

	* reverse.sh: www.dastelefonbuch.de und www.goyellow.de als neue
	Rückwärtssuche-Provider

2006-09-30:

	callmonitor-1.6 veröffentlicht

2006-10-01:

	* dboxlcd.sh: Behebung eines dummen Fehlers bei internen Umstellungen
	(Danke an Obi)

	callmonitor-1.6.1 bereitgestellt

2006-10-02:

	* reverse.sh: Neuer Rückwärtssuche-Provider 11880; zusätzliche
	Fallback-Suche nur nach Vorwahlen (bei Google)

2006-10-08:

	callmonitor 1.7 veröffentlicht

2006-10-11:

	* callmonitor.sh: Neue Variablen SOURCE_DISP und DEST_DISP mit
	"anzeigefreundlicheren" Varianten von SOURCE und DEST (Landesvorwahl
	weg, Call-by-Call-Vorwahlen weg, etc.)

2006-11-03:

	* format.sh: Funktion f_duration (1. Argument: Zeit in Sekunden, z.B.
	$DURATION) zur Darstellung von Zeitdauern als "hh:mm:ss"

2006-11-14:

	* webui.sh: Fixed bug: uc/lc variable name (thanks to mic29)

2006-11-17:
	
	* config.sh: Portfreigaben, WLAN oder SIP-Accounts an-/ausschalten:

	    config forward 1 on  # 1. Portforwarding aktivieren
	    config forward 3 off # 3. Portforwarding deaktivieren
	    config wlan off      # WLAN aus
	    config wlan on       # WLAN an
	    config sip 4 on      # 4. SIP-Account aktivieren
	    config sip 2 off     # 2. SIP-Account deaktivieren

2006-11-18:

	callmonitor 1.8 veröffentlicht