@@ -10,6 +10,8 @@ Wichtig
 Demnächst anschauen
 ----------------------------------------------------------------------
 
+Landeseinstellungen (Schweiz, Österreich)
+
 Ergebnis der Rückwärtssuche besser strukturieren (zumindest Name und Adresse
 trennen)
 
