@@ -29,7 +29,8 @@ check "$CALLMONITOR_DEBUG" yes:debug
 check "$CALLMONITOR_REVERSE" yes:reverse
 select "$CALLMONITOR_REVERSE_CACHE" no transient:trans persistent:pers
 select "$CALLMONITOR_REVERSE_PROVIDER" dasoertliche:oert \
-    inverssuche:invers telefonbuch:telbu goyellow:goye 11880:elf
+    inverssuche:invers telefonbuch:telbu goyellow:goye 11880:elf \
+    search_ch:ch
 select "$CALLMONITOR_AREA_PROVIDER" google callmonitor:cm :null
 
 SYSLOG='$(lang de:"System-Log" en:"system log")'
@@ -106,6 +107,8 @@ cat << EOF
 	    value="goyellow"$goye_sel>GoYellow</option>
 	<option title="www.11880.com"
 	    value="11880"$elf_sel>11880</option>
+	<option title="tel.search.ch"
+	    value="search_ch"$ch_sel>search.ch (CH)</option>
     </select></td>
 </tr>
 <tr><td />
