@@ -361,3 +361,8 @@
 2006-11-18:
 
 	callmonitor 1.8 veröffentlicht
+
+2006-12-31:
+
+	* search_ch.sh: Rückwärtssuche bei tel.search.ch (für Nummern aus der
+	Schweiz); vielen Dank an niknak.
